[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/InventorySlot.gd" id="1_g0200"]

[node name="InventorySlot" type="Panel"]
script = ExtResource("1_g0200")
custom_minimum_size = Vector2(64, 64)
size = Vector2(64, 64)

[node name="Icon" type="TextureRect" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
stretch_mode = 3
expand_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuantityLabel" type="Label" parent="."]
anchors_preset = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -24.0
offset_right = -4.0
offset_bottom = -4.0
horizontal_alignment = 2
vertical_alignment = 2
visible = false

[node name="Highlight" type="Panel" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
self_modulate = Color(1, 1, 0.5, 0.45)
mouse_filter = 2
visible = false

[node name="HotkeyLabel" type="Label" parent="."]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 4.0
offset_right = 24.0
offset_bottom = 20.0
horizontal_alignment = 1
vertical_alignment = 1
visible = false
